<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App common -->
    <string name="app_name">Ninja Learn Japanese</string>
    <string name="facebook_id">753724238025958</string>
    <string name="image_description">Image</string>
    <string name="loading">Loading…</string>
    <string name="exit_message">Goodbye! Nine to meet you soon.</string>
    <string name="back_press_message">Press back button again to exit</string>

    <!-- Dialog text -->
    <string name="dg_message_title">You have a message from NPC.</string>
    <string name="dg_welcome_title">Welcome you!</string>
    <string name="dg_congratulation_title">Wow! Congratulation</string>
    <string name="dg_error_title">May be it had something went wrong!</string>
    <string name="dg_warning_title">Are you sure to do it?</string>
    <string name="dg_accept_button">OK</string>
    <string name="dg_not_accept_button">NO</string>
    <string name="dg_not_accept_exit_button">Wait! Keep me play.</string>
    <string name="dg_cancel_button">Cancel</string>

    <!-- Start activity menu -->
    <string name="menu_start">Start new game</string>
    <string name="menu_custom_game">Custom game</string>
    <string name="menu_hight_score">High score</string>
    <string name="menu_option">Option</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_start_custom">Start custom game</string>
    <string name="menu_make_game">Make new game</string>
    <string name="menu_back">Back</string>

    <!-- Create custome game activity -->
    <string name="hint_enter_new_word">Enter new word!</string>
    <string name="hint_input_hint_picture">Your hint picture!</string>
    <string name="txt_save_to">Save to &#8230;</string>
    <string name="intent_select_picture">Select picture from</string>
    <string name="error_input_blank">You forgot to enter new word!</string>
    <string name="error_input_already_exist">The word you enter already exist!</string>

    <!-- Crop image activity -->
    <string name="txt_crop_image_title">Adjust your image!</string>
    <string name="btn_crop">Done</string>
    <string name="btn_rotate_left">Rotate left</string>
    <string name="btn_rotate_right">Rotate right</string>

    <!-- Screen title -->
    <string name="sc_list_category_title">List categories</string>

    <!-- Pop-up win game -->
    <string name="txt_you_got_point">You got</string>
    <string name="txt_bonus">Bonus</string>
    <string name="txt_win_game_congratulation">Congratulation!</string>
    <string name="txt_point">points</string>

    <!-- High Score Activity -->
    <string name="txt_high_score">High Score</string>

    <string-array name="txt_high_score_label">
        <item>NEWBIE</item>
        <item>ELEMENTARY</item>
        <item>PRE-INTERMEDIATE</item>
        <item>INTERMEDIATE</item>
        <item>UPPER-INTERMEDIATE</item>
        <item>ADVANCE</item>
        <item>PROFICIENCY</item>
        <item>MASTER</item>
    </string-array>
    <string-array name="txt_high_score_message">
        <item>Fighting, you can be better!</item>
        <item>You are pure potential, let\'s try more !</item>
        <item>Leaning Japanese is your favorite !</item>
        <item>Wow, you are very good at Japanese !</item>
        <item>You are gifted at Japanese</item>
        <item>Amazing, your Japanese is excellent</item>
        <item>You can do everything with your Japanese !</item>
        <item>You are the best, Master of Japanese !</item>
    </string-array>

    <!-- Error message -->
    <string name="coming_soon">Coming soon</string>
    <string name="facebook_app_not_found">Facebook App not found</string>
    <string name="please_wait">Please wait&#8230;</string>

    <!-- Other language text -->
    <string name="txt_high_score_fighting">Fighting, you can be better!</string>
    <string name="txt_high_score_newbie">NEWBIE</string>
    <string name="title_activity_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About</string>

</resources>