<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@id/layout"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@id/btn_left_navi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_rotate_left" />

            <Button
                android:id="@id/btn_right_navi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_rotate_right" />
        </LinearLayout>

        <Button
            android:id="@id/btn_create"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_crop" />
    </LinearLayout>

    <gdg.ninja.croplib.utils.CropView
        android:id="@id/img_quest_hint"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout" />

</RelativeLayout>