<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6" >

   

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="52dp"         
            android:background="@android:color/white"
            android:orientation="horizontal" >

            <!-- For save and create new game button -->

            <FrameLayout
                android:id="@id/btn_start"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:background="@color/secondary_app_color" >

                <TextView
                    android:id="@id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ok" />
            </FrameLayout>
            <!-- For enter new word -->

            <EditText
                android:id="@id/txt_input_new_word"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/btn_start"
                android:hint="@string/hint_enter_new_word" />
        </RelativeLayout>
   

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ImageView
            android:id="@id/img_input_hint_picture"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:contentDescription="@string/hint_input_hint_picture" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <!-- Button Take Picture -->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/btn_take_picture" >

                <TextView
                    android:id="@id/btn_take_picture"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/camera_icon" />
            </FrameLayout>
            <!-- Button Choose from galary -->

            <FrameLayout
                android:id="@id/btn_take_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/btn_choose_from_gallery" >

                <TextView
                    android:id="@id/btn_choose_from_galary"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@drawable/browse_icon" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/save_to_1"
            android:gravity="center"
            android:text="@string/txt_save_to" />

        <!-- Spinner choose category -->

        <Spinner
            android:id="@id/spinner_choose_category"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@color/save_to_2" />
    </LinearLayout>

</LinearLayout>